--- a/classes/cleric.html
+++ b/classes/cleric.html
@@ -4,25 +4,24 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Old School Essentials - toki pona</title>
-    <!--
-        (you could easily use “jan” instead of “ijo”, I just started there for simplicity)
-
-        - ijo sewi / ijo pona: divine being / being of benefit
-        - ijo kiwen insa / ijo pi pali kiwen: inside rock being / being of rock-working
-        - ijo suli: tall being (suli also meaning “important” amuses me as elves tend to be depicted self-important)
-        - ijo utala: being of battle
-        - ijo lili: little being
-        - ijo pi wawa nasa: being of strange power
-        - ijo len/ ijo pi kama jo: hidden being / being of taking (“becoming having”)
-    -->
-
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="/ose-toki-pona/styles.css">
 </head>
 <body>
+<div class="mainContent">
+<div class="column">
     <h1><!--Cleric-->jan sewi</h1>
 
+    <!--
+    STR - WAWA - W
+    DEX - body, dodge, reflex
+    CON - health, body - SIJELO
+    INT - KNOWLEDGE - SONA
+    WIS - 
+    CHA - TOKI, 
+    -->
+
     <table>
-        <caption>sona pi jan sewi</caption>
+        <caption><!-- Cleric Info -->sona pi jan sewi</caption>
         <tr>
             <td><b><!--Requirements-->o wile e nanpa musi</b></td>
             <td><!--None-->ala</td>
@@ -265,4 +264,6 @@
         to include more powerful types of undead
         monsters.
     </p>
+</div>
+</div>
 </body>
