--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="dropdown-content">
 				<a href="/ose-toki-pona/characters/game-statistics.html"><!--Game Statistics-->nanpa musi</a>
 				<a href="/ose-toki-pona/characters/creating-a-character.html"><!-- Creating a Character -->o pali e jan musi</a>
-				<a href="/ose-toki-pona/characters/ability-scores.html"><!-- Ability Scores -->nanpa ken</a>
+				<a href="/ose-toki-pona/characters/ability-scores.html"><!-- Ability Scores -->nanpa musi</a>
 				<a href="/ose-toki-pona/characters/alignment.html"><!-- Alignment -->jan nasin</a>
 				<a href="/ose-toki-pona/characters/languages.html"><!-- Languages -->toki mute</a>
 				<a href="/ose-toki-pona/characters/advancement.html"><!-- Advancement -->Advancement</a>
@@ -35,7 +35,7 @@
         - ijo len/ ijo pi kama jo: hidden being / being of taking (“becoming having”)
     	-->
 		<div class="dropdown">
-			<button class="dropbtn">pali jan</button>
+			<button class="dropbtn"><!--Classes-->pali jan</button>
 			<div class="dropdown-content">
 				<a href="/ose-toki-pona/classes/cleric.html">jan sewi</a>
 				<a href="/ose-toki-pona/classes/dwarf.html">jan pi pali kiwen</a>
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 		<div class="dropdown">
-			<button class="dropbtn">Magic</button>
+			<button class="dropbtn"><!--Magic-->wawa nasa</button>
 			<div class="dropdown-content">
 				<a href="/ose-toki-pona/magic/rules.html">Rules</a>
 				<a href="/ose-toki-pona/magic/spell-books.html">Spell Books</a>
@@ -73,7 +73,7 @@
 			</div>
 		</div>
 		<div class="dropdown">
-			<button class="dropbtn"><!--Classes-->jan musi mute</button>
+			<button class="dropbtn"><!--Classes-->jan pali</button>
 			<div class="dropdown-content">
 				<a href="/ose-toki-pona/adventures/party-organisation.html">Party Organisation</a>
 				<a href="/ose-toki-pona/adventures/time-weight-movement.html">Time, Weight, Movement</a>
@@ -170,7 +170,7 @@
 				<i>Old-School Essentials</i>
 				has light, easily modified rules, putting the focus of play on shared imagination, improvisation, and fun. 
 			-->
-			<b>pona e nasin.</b>
+			<b>pona nasin.</b>
 			<i>musi Old-School Essentials</i>
 			li pona e musi nasin.
 			lawa wawa li sitelen lawa.
@@ -197,7 +197,7 @@
 			<i>musi Old-School Essentials</i>
 			li kepeken e Classic 1980s Basix/Expert (B/X) D&amp;D.
 			
-			musi ni la lipu ali tan tenpo sike mute mute li ken kepeken.
+			musi ni la, lipu ali tan tenpo sike mute mute li ken kepeken.
 		</p>
 	</div>
 </div>
